--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "xml2json": "^0.12.0"
+  },
+
+  "config": {
+    "commitizen": {
+      "path": "/usr/local/lib/node_modules/commitizen/node_modules/cz-conventional-changelog"
+    }
   }
 }
