--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "xml2json": "^0.12.0"
   },
-
   "config": {
     "commitizen": {
       "path": "/usr/local/lib/node_modules/commitizen/node_modules/cz-conventional-changelog"
     }
+  },
+  "devDependencies": {
+    "@types/node": "^13.13.4",
+    "@types/xml2json": "^0.11.0",
+    "ts-node": "^8.9.1",
+    "typescript": "^3.8.3"
   }
 }
